# game_of_life

./: CMakeLists.txt  README.md  config.txt  game_of_life.cpp
